# grimaur

./: .editorconfig  .gitignore  .pre-commit-config.yaml  PKGBUILD  README.md  clean.sh  grimaur  grimoire  pyproject.toml  repos.conf.example  repos.ini  repos.ini.example
.github/: CODEOWNERS  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  releases.yml
__tests__/: README.md  grimaurshim.py  test_dep_parsing.py  test_use_ssh.py
__tests__/fixtures/use-ssh-nested/: PKGBUILD
base/: _grimaur.zsh  _grimoire.zsh  grimaur-completion.bash  grimaur.fish  grimoire-completion.bash  grimoire.fish
tests/: bench_search.sh  grimaurshim.py  grimoireshim.py  test_backend_flags.py  test_build.py  test_completions.py  test_dep_parsing.py  test_dispatch.py  test_installed_set.py  test_plain_output.py  test_repo_clone.py  test_repo_url.py  test_review.py  test_search_cache.py  test_update.py  test_use_ssh.py
tests/fixtures/use-ssh-nested/: PKGBUILD
tools/: outline
