[project]
name = "grimoire"
version = "0.1.2"
requires-python = ">=3.14"

[tool.ruff]
target-version = "py314"
line-length = 88
extend-include = ["grimoire"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "W", "TC", "PERF", "S", "PLW", "SIM", "PTH", "RUF", "FURB", "A", "ISC"]
ignore = [
    "E501",
    "W191",
    "PLW0603",  # global-statement: module-level config flags are intentional (cf. pylint W0603 disable)
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately shell out to git/pacman with known, fixed argv.
"tests/**" = ["S603", "S607"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "W0603",  # global-statement
]

[tool.pylint.format]
max-line-length = 88
